--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "argon2": "^0.31.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "hbs": "^4.2.0",
     "mongoose": "^8.0.0"
-  }
+  },
+  "devDependencies": {}
 }
