--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "hbs": "^4.2.0",
-    "mongoose": "^8.0.0"
-  },
-  "devDependencies": {}
+    "mongoose": "^8.0.0",
+    "multer": "^1.4.5-lts.1"
+  }
 }
