--- a/package.json
+++ b/package.json
@@ -9,17 +9,26 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@editorjs/editorjs": "^2.28.2",
+    "@tiptap/core": "^2.1.12",
+    "@tiptap/pm": "^2.1.12",
+    "@tiptap/starter-kit": "^2.1.12",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^5.1.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "hbs": "^4.2.0",
+    "imagesloaded": "^5.0.0",
+    "masonry-layout": "^4.2.2",
     "mongoose": "^8.0.0",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0",
-    "tailwindcss": "^3.3.5"
+    "react": "^18.2.0",
+    "swiper": "^11.0.4",
+    "tailwindcss": "^3.3.5",
+    "yarn": "^1.22.19"
   }
 }
