--- a/package.json
+++ b/package.json
@@ -9,15 +9,27 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@ckeditor/ckeditor5-basic-styles": "^40.1.0",
+    "@ckeditor/ckeditor5-core": "^40.1.0",
+    "@ckeditor/ckeditor5-dev-utils": "^39.2.1",
+    "@ckeditor/ckeditor5-editor-classic": "^40.1.0",
+    "@ckeditor/ckeditor5-essentials": "^40.1.0",
+    "@ckeditor/ckeditor5-heading": "^40.1.0",
+    "@ckeditor/ckeditor5-list": "^40.1.0",
+    "@ckeditor/ckeditor5-paragraph": "^40.1.0",
+    "@ckeditor/ckeditor5-theme-lark": "^40.1.0",
+    "@ckeditor/ckeditor5-ui": "^40.1.0",
     "@editorjs/editorjs": "^2.28.2",
     "@tiptap/core": "^2.1.12",
     "@tiptap/pm": "^2.1.12",
     "@tiptap/starter-kit": "^2.1.12",
+    "axios": "^1.6.2",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^5.1.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "faker": "^6.6.6",
     "hbs": "^4.2.0",
     "imagesloaded": "^5.0.0",
     "masonry-layout": "^4.2.2",
@@ -30,5 +42,8 @@
     "swiper": "^11.0.4",
     "tailwindcss": "^3.3.5",
     "yarn": "^1.22.19"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^8.3.1"
   }
 }
